--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<input type="text" [(ngModel)]="name">
-<p>{{name}}</p>
+<input type="text" [(ngModel)]="name"><br/><br/>
+<input type="text" [(ngModel)]="imie">
+<p>{{imie}}</p>
+<input type="text" [(ngModel)]="liczba">
+<p>{{liczba}}</p>
