5 files modified, 5 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
-<input type="text" [(ngModel)]="name"><br/><br/>
-<input type="text" [(ngModel)]="imie">
-<p>{{imie}}</p>
-<input type="text" [(ngModel)]="liczba">
-<p>{{liczba}}</p>
+
+<div class="container">
+  <div class="row">
+
+
+  </div>
+</div>
+<h3>HEY</h3>
+<hr>
+<app-servers></app-servers>
